# mhi

./: .gitignore  .travis.yml  LICENSE  Makefile  Makefile.pyproject  README  README.md  configobj.py  imap-10-commandments.md  mhi.py  mhiWrap  mkMhiLinks  pyproject.toml  readlisp.py  requirements-dev.txt  requirements.txt  setup.py  sexpr.py
.github/workflows/: python-test.yml
mhi/: __init__.py  __main__.py  main.py  readlisp.py  sexpr.py
mhi/mklinks/: __main__.py
reqs/: Makefile.piptools  dev-requirements.in  dev-requirements.txt  requirements.in  requirements.txt
tests/: imap4mock.py  test_consolidate.py  test_fetch.py
