[project]
name = "mhi"
version = "0.8.3"
requires-python = ">=3.8"
description = "MH for IMAP"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Paul Jimenez", email = "pj@place.org"}
]
classifiers = [ 
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
    'Natural Language :: English',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Communications :: Email :: Email Clients (MUA)',
]
dependencies = [
    "configobj",
]

[project.urls]
Homepage = "http://github.com/pjz/mhi"
Repository = "http://github.com/pjz/mhi.git"

[project.gui-scripts]
mhi = 'mhi:main'
mhiWrap = 'mhi:cmd_main'

[project.optional-dependencies]
dev = [
    "mock",
    "twine",
    "pytest",
    "pytest-cov",
    "pytest-mypy",
    "pytest-pylint",
    "pytest-timeout",
    "pytest-runfailed",
]

[mypy]
ignore_missing_imports = true

[tool.black]
line-length = 160
target-version = ['py38']
skip-string-normalization = true
quiet = true
